# Python-CLI

./: README.md
notes-cli/: notes.json  pyproject.toml
notes-cli/notes/: cli.py  cli_state.py
notes-cli/notes/archive/: cli copy.py
